<resources>
    <string name="app_name">Dimans Zulip</string>

    <string name="emoji_1">😀</string>
    <string name="emoji_2">😃</string>
    <string name="emoji_3">😆</string>
    <string name="emoji_4">🙃</string>
    <string name="emoji_5">😇</string>
    <string name="emoji_6">😍</string>
    <string name="emoji_7">☺</string>
    <string name="emoji_8">😘</string>
    <string name="emoji_9">❤</string>
    <string name="emoji_10">🤑</string>
    <string name="emoji_11">😐</string>
    <string name="emoji_12">😴</string>
    <string name="emoji_13">😝</string>
    <string name="emoji_14">👍</string>
    <string name="emoji_15">😜</string>
    <string name="emoji_16">🤓</string>
    <string name="emoji_17">💯</string>
    <string name="emoji_18">💋</string>
    <string name="emoji_19">💌</string>
    <string name="emoji_20">💟</string>
    <string name="emoji_21">💣</string>

    <string name="message_field_hint">Write something…</string>

    <string name="tab_item_subscribe">Subscribed</string>
    <string name="tab_item_all">All Streams</string>

    <string name="in_a_meeting">In a meeting</string>
    <string name="active">active</string>
    <string name="offline">offline</string>
    <string name="idle">idle</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status">Status</string>
    <string name="unicodeEmoji">unicode_emoji</string>
    <string name="topiclable">Topic #%1$s</string>
    <string name="mess">\"mess %1$s\"</string>
    <string name="search">Search…</string>
    <string name="item_grille">"#%1$s"</string>


    <string name="systemError">System error</string>
    <string name="internetError">Internet error. Check internet connection</string>
    <string name="write_stream_name">Write stream name</string>
    <string name="write_stream_name_tint">Stream name…</string>
    <string name="write_stream_description">Write stream description</string>
    <string name="stream_description_hint">Stream description…</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="please_write_stream_name">Please write stream name</string>
    <string name="create_channel">Create Stream</string>
    <string name="channels">Channels</string>
    <string name="people">People</string>
    <string name="profile">Profile</string>
    <string name="topic">#topic</string>
    <string name="topics_in_this_stream">Topics in this stream</string>
    <string name="close_help">close help</string>
    <string name="please_write_topic_name">Please write topic name</string>
    <string name="please_write_message_text">Please write message text</string>
    <string name="edit_message">Edit Message</string>
    <string name="apply">Apply</string>
    <string name="dont_have_permission">You dont have permission on that operation</string>
    <string name="current_message_topic">Current message topic:</string>
    <string name="choose_topic_for_message">Choose topic for message</string>
    <string name="message_copied">Message copied</string>
    <string name="message_already_in_this_topic">Message already in this topic</string>
    <string name="backend_error">Something went wrong</string>
    <string name="topic_is_not_exist">This topic is not exist, to create topic please send message to this topic name</string>

</resources>
