<?xml version="1.0" encoding="utf-8"?>
<com.facebook.shimmer.ShimmerFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:id="@+id/stream_bottom_sheet_shimmer">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_main">

        <View
            android:id="@+id/streams_shape_top"
            android:layout_width="60dp"
            android:layout_height="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bottom_sheet_shape_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/stream_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:padding="8dp"
            android:text="@string/write_stream_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/streams_shape_top" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/stream_name_edit_text"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/bg_message"
            android:hint="@string/write_stream_name_tint"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/stream_name_text_view"
            app:layout_constraintTop_toBottomOf="@id/stream_name_text_view" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/stream_description_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:padding="8dp"
            android:text="@string/write_stream_description"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/stream_name_edit_text"
            app:layout_constraintTop_toBottomOf="@id/stream_name_edit_text" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/stream_description_edit_text"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/bg_message"
            android:hint="@string/stream_description_hint"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/stream_name_text_view"
            app:layout_constraintTop_toBottomOf="@id/stream_description_text_view" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/create_stream_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_message"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/cancel_stream_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stream_description_edit_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_stream_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_message"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/create_stream_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/create_stream_button"
            app:layout_constraintBottom_toBottomOf="@id/create_stream_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.facebook.shimmer.ShimmerFrameLayout>