<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bg_main">

    <View
        android:id="@+id/streams_shape_top"
        android:layout_width="60dp"
        android:layout_height="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bottom_sheet_shape_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/edit_message_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/edit_message"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/streams_shape_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_message_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        android:background="@drawable/bg_message"
        android:textColor="@color/white"
        android:padding="8dp"
        tools:text="EditMessage content"
        app:layout_constraintTop_toBottomOf="@id/edit_message_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/apply_edit_message" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/apply_edit_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_message_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cancel_edit_message"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bg_message"
        android:layout_marginTop="20dp"
        android:text="@string/apply"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_edit_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_message"
        app:layout_constraintStart_toEndOf="@id/apply_edit_message"
        app:layout_constraintTop_toTopOf="@id/apply_edit_message"
        app:layout_constraintBottom_toBottomOf="@id/apply_edit_message"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/cancel"
        android:textSize="16sp"
        android:textColor="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>