<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".mvp.streams.StreamFragment">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/streams_shimmer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/unselected">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/search_streams_edit_text"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:hint="@string/search"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toStartOf="@id/cancel_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/cancel_image"
                android:layout_width="40dp"
                android:layout_height="60dp"
                android:background="@color/unselected"
                android:src="@drawable/ic_cancel"
                android:visibility="invisible"
                app:layout_constraintEnd_toStartOf="@id/search_streams_image_view"
                app:layout_constraintStart_toEndOf="@id/search_streams_edit_text"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/search_streams_image_view"
                android:layout_width="60dp"
                android:layout_height="0dp"
                android:src="@drawable/ic_search"
                app:layout_constraintBottom_toBottomOf="@id/cancel_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cancel_image"
                app:layout_constraintTop_toTopOf="@id/cancel_image" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_channels"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_streams_edit_text"
                app:tabIndicatorColor="@color/green"
                app:tabMode="fixed"
                app:tabTextColor="@color/white"
                android:background="@color/unselected">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_item_subscribe" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_item_all" />

            </com.google.android.material.tabs.TabLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/channel_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" />

</androidx.appcompat.widget.LinearLayoutCompat>
